--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.5",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
